# unas

./: pyproject.toml
src/unas/: mobilenet.py  utils.py
src/unas/compiler/tinyengine/: GeneralMemoryScheduler.py  README.md  TfliteConvertor.py
src/unas/compiler/tinyengine/allocator/: base_allocator.py
src/unas/compiler/tinyengine/converters/tflite_parser/: SEelement.py  add.py  avgpool.py  conv2d.py  fc.py  maxpool.py  mean1dto2d.py  upsample.py  utils.py
src/unas/compiler/tinyengine/operators/: conv2d.py
src/unas/datasets/: __init__.py  gtsrb.py  imagenet.py
src/unas/dep/torchprofile/: README.md
src/unas/oneshot/: __init__.py  helper.py  layers.py  share.py
src/unas/searchspace/: __init__.py  layers.py  model.py
src/unas/shim/: __init__.py  _sub.py  layers.py  runner.py  shutup.py
src/unas/variants/: __init__.py  bdwrconv2d.py  conv2d.py  dwconv2d.py  full.py
tests/: find-single.py  helper.py  nas.py  sample-mult.py  single.py  subds.py  weight-initialization.py
