[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unas"
version = "0.0.1"
authors = [{ name = "Henrik Claßen", email = "henrik.classen@web.de" }]
license = "GPL-2.0-only"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy == 1.26.4",
    "flatbuffers",
    "pandas",
    "matplotlib",
    "pyqt6",
    "tdqm"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["unas*"]
